spade-tests/src/snapshots/spade_tests__typeinference__argument_type_mismatch_named.snap
---
source: spade-tests/src/typeinference.rs
---
entity e(clk: clock, a: bool) -> bool {
    a
}

entity main(clk: clock) -> bool {
    let b: int<3> = 0;
    inst e$(clk, a: b)
}


error: Argument type mismatch. Expected bool got int<3>
  ┌─ testinput:7:21
  │
7 │     inst e$(clk, a: b)
  │                     ^ expected bool
  │
  = note: Expected: bool
               Got: int<3>


