spade-tests/src/snapshots/spade_tests__typeinference__array_shorthand_wrong_inner_type.snap
---
source: spade-tests/src/typeinference.rs
---
fn test() {
    let _: [uint<2>; 4] = [1u4; 4];
}


error: Expected type [uint<2>; 4], got [uint<4>; 4]
  ┌─ testinput:2:27
  │
2 │     let _: [uint<2>; 4] = [1u4; 4];
  │                  -        ^^^^^^^^
  │                  │        ││
  │                  │        │Type 4 inferred here
  │                  │        Expected [uint<2>; 4]
  │                  Type 2 inferred here
  │
  = note: Expected: 2
                in: [uint<2>; 4]
               Got: 4
                in: [uint<4>; 4]
