spade-tests/src/snapshots/spade_tests__typeinference__array_type_mismatch.snap
---
source: spade-tests/src/typeinference.rs
---
fn x() -> bool  {
    let a = [0, true, 2];
    false
}


error: Array element type mismatch. Expected Number<_>
  ┌─ testinput:2:17
  │
2 │     let a = [0, true, 2];
  │              -  ^^^^ Expected Number<_>
  │              │   
  │              To match this
  │
  = note: Expected: Number<_>
               Got: bool


